<resources>

    //Textos
    <string name="welcome_message">BIENVENIDO</string>
    <string name="welcome_user">Bienvenido,\n%1$s</string>
    <string name="welcome">Bienvenido a Club Deportivo</string>
    <string name="add_new_member">Inscribir nuevo socio</string>
    <string name="activity_name">Nombre de la actividad</string>
    <string name="activity">Asignar Actividad</string>
    <string name="document_in">Ingrese DNI del socio</string>
    <string name="registerTxt">Abrir formulario de registro</string>
    <string name="apto">¿Presentó apto físico?</string>
    <string name="quote">¿Pagó la cuota?</string>
    <string name="member_fullname">%1$s, %2$s</string>
    <string name="quote_expired">Vencidas</string>
    <string name="quote_paid">Paga</string>
    <string name="quote_none">No paga</string>
    <string name="quote_status">Estado de cuota: %1$s</string>
    <string name="userFullName">Nombre Completo</string>
    <string name="activityUser">Actividades Asignadas</string>



    //Botones
    <string name="text_in">Ingresar</string>
    <string name="register">Registrarse</string>

    // Imputs

    //Iconos
    <string name="icon_new_member">Icono de nuevo Socio</string>
    <string name="icon_add_activity">Icono de asignar actividad</string>
    <string name="icon_list_quotas">Icono de asignar actividad</string>
    <string name="icon_home">icono de inicio</string>
    <string name="icon_members">icono de socios</string>
    <string name="icon_activities">icono de actividades</string>
    <string name="icon_">icono de pago de cuota</string>
    <string name="icon_payments">icono de pagos</string>

    <string name="app_name">ClubDeportivo</string>
    <string name="logo_de_la_aplicacion">Logo</string>
    <string name="text_account">¿No tienes cuenta? Registrate</string>
    <string name="text_forgot">Olvidé mi contraseña</string>
    <string name="password">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="repeat_Pass">Repetir contraseña</string>
    <string name="text_login">¿Tienes una cuenta? Inicia sesión</string>
    <string name="user_rol">Profesor</string>
    <string name="list">Estado de cuotas</string>
    <string name="members">Socios</string>
    <string name="home">Inicio</string>
    <string name="icon_pay_quota">Icono de abonar cuota</string>
    <string name="payments">Pagos</string>
    <string name="register_new_member">Registrar nuevo Socio</string>
    <string name="document">Documento</string>
    <string name="date">Fecha de Nacimiento</string>
    <string name="gender">Género</string>
    <string name="pass">Pagó</string>
    <string name="back">Volver</string>
    <string name="payFee">Abonar Cuota</string>
    <string name="mountPayFee">Monto a Abonar</string>
    <string name="cash">Efectivo</string>
    <string name="card">Tarjeta</string>
    <string name="pay">Pagar</string>
    <string name="success_register">¡Registro Exitoso!</string>
    <string name="redirect">Serás redirigido al menú principal en 3 segundos...</string>
    <string name="success_pay">¡Pago exitoso!</string>
    <string name="activities">Actividades</string>
    <string name="name_activity">Nombre de actividad</string>
    <string name="day">Día</string>
    <string name="cupo">Cupo disponible</string>
    <string name="add_person">Agregar participante</string>
    <string name="add">Agregar</string>
    <string name="maturity">Vencimiento</string>
    <string name="status">Estado de la cuota</string>
    <string name="schedule">Horario</string>
    <string name="user_name">Nombre de usuario</string>


</resources>