<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121720"
    tools:context=".PayFee">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E5E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topBackground"
        android:layout_width="416dp"
        android:layout_height="719dp"
        android:background="@drawable/top_rounded_background"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="240dp"
        android:layout_height="163dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_de_la_aplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoclub" />

    <!-- Esto hace que el formulario pueda ser scrolleable -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/form_scroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout

        android:id="@+id/buttom_container"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_container"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.94">


        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="299dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_container"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view">

            <TextView
                android:id="@+id/txt_payFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/payFee"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_document"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/document"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_surname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/surname"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/nunito"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_mount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/mountPayFee"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/cash"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito"
                android:hint="@string/card"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#B11719"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/pay"
                android:textColor="#E5E5E5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#A7A8A9"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/back"
                android:textColor="#E5E5E5"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:background="@drawable/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/nav_btn_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_home"
                android:src="@drawable/house_solid"
                app:tint="#E5E5E5"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="637dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_members"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_members"
                android:src="@drawable/users_solid"
                android:textAlignment="center"
                app:tint="#E5E5E5"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="637dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/members"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_activities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_activities"
                android:src="@drawable/trophy_solid"
                android:textAlignment="center"
                app:tint="#E5E5E5"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="637dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/activities"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_btn_payments"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_pay_quota"
                android:src="@drawable/money_check_dollar_solid"
                app:tint="#C3241A"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="637dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/payments"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp">

            </TextView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>