<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/txt_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/activity"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_nombre_actividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/activity_name"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/input_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/document_in"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_assign"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#B11719"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/activity"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:maxWidth="320dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#A7A8A9"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/back"
        android:textColor="#E5E5E5"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
